richtext-content: fix spacing of nested p, table and pre

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -8127,8 +8127,9 @@ output {
 .richtext-content {
   p, table, pre {    
     margin-bottom: 16px;
-    
+  }
 
+  & > p, & > table, & > pre {
     &:first-child {
       margin-top: 6px;
     }
